# libxtd

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  gmon.out  utility.pc.in  xtd-static.pc.in  xtd.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
projects/visual-studio/: libutility.sln  libutility.vcxproj  libutility.vcxproj.filters
projects/xcode/libutility.xcodeproj/: project.pbxproj
projects/xcode/libutility.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libutility.xcodeproj/project.xcworkspace/xcshareddata/: libutility.xccheckout
projects/xcode/libutility.xcodeproj/project.xcworkspace/xcuserdata/joe.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libutility.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libutility.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: libutility-static-ios.xcscheme  libutility-static.xcscheme  xcschememanagement.plist
projects/xcode/libutility.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: libutility.xcscheme  xcschememanagement.plist
projects/xcode/test-dir.xcodeproj/: project.pbxproj
projects/xcode/test-dir.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: test-dir.xcscheme  xcschememanagement.plist
src/: Makefile  Makefile.am  Makefile.in  bytes.c  caesar.c  checksums.c  cmdopt.c  console-unix.c  console-windows.c  console.c  console.h  crash.c  csv.c  encoding-base64.c  encoding-huffman.c  encryption-aes.c  encryption-caesar.c  endian.c  endianess.c  exceptions.c  exceptions.h  fileio-unix.c  fileio-windows.c  fileio.c  filesystem-unix.c  filesystem-windows.c  filesystem.c  floating-point.c  fsm.c  huffman.c  libutility-config.h  libutility-config.h.in  libxtd-config.h.in  memory.c  mime.c  mime.h  observers.c  refobj.c  sort.c  stamp-h1  (+10 more)
src/.deps/: bytes.Po  crash.Po  exceptions.Po
src/xtd/: all.h  checksums.h  cmdopt.h  console.h  csv.h  encoding.h  encryption.h  endian.h  exceptions.h  filesystem.h  floating-point.h  memory.h  refobj.h  string.h  test.h  time.h
tests/: Makefile  Makefile.am  Makefile.in  myfile.txt  test-all.c  test-base64.c  test-bytes.c  test-checksums.c  test-cmdopt.c  test-console.c  test-dir.c  test-encoding.c  test-encryption.c  test-endian.c  test-exceptions  test-exceptions.c  test-file.c  test-filesystem.c  test-floating-point.c  test-fsm.c  test-huffman.c  test-memory.c  test-observers.c  test-refobj.c  test-scrambling  test-scrambling.c  test-string.c  test-time.c
tests/.deps/: test-exceptions.Po  test-scrambling.Po
